# hackathon-tt-py-snokam

./: .gitignore  IMPLEMENTATION_PLAN.md  SOLUTION.md
.claude/: CLAUDE.md
.claude/commands/: analyze-failures.md  check-rules.md  commit-progress.md  compare-output.md  esprima-docs.md  iterate.md  quick-test.md  solution-doc.md
evaluate/checks/results/: latest.json
projects/ghostfolio/: package-lock.json  package.json
translations/ghostfolio_pytx/: README.md  pyproject.toml
translations/ghostfolio_pytx/app/implementation/_support/: _base_portfolio_calculator.py  datefns.py  lodashish.py
translations/ghostfolio_pytx/app/implementation/portfolio/calculator/roai/: portfolio_calculator.py
tt/: pyproject.toml
tt/tests/: test_emit.py  test_parse_smoke.py  test_preprocess.py  test_shims.py
tt/tt/: ast_nodes.py  class_extractor.py  cli.py  emitter.py  lexer.py  merger.py  parser.py  preprocess.py  runner.py  source_analyzer.py  translator.py  ts_parser.py  type_stripper.py
tt/tt/passes/: __init__.py  control_flow.py  libmap.py  py_ready.py  rename.py
tt/tt/scaffold/ghostfolio_pytx/: CHECKLIST.md  sources.json  tt_import_map.json
tt/tt/scaffold/ghostfolio_pytx/_support/: __init__.py
tt/tt/scaffold/ghostfolio_pytx/shims/: __init__.py  bigjs.py  datefns.py  ghostfolio_helper.py  nest_logger.py  scaffold_constants.json
