[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostfolio-pytx"
version = "0.1.0"
description = "Python translation skeleton of the Ghostfolio portfolio API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "requests>=2.32",
]

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
testpaths = ["../../projecttests"]
pythonpath = ["."]
